--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,3 +244,52 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+
+@media screen and (max-width: 980px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+.container{
+  max-width: 750px;
+}
+  #logo {
+    margin-left: 25px;
+  }
+
+  .main-section {
+    max-width: 700px;
+    margin-left: 25px;
+    }
+
+  .sidebar {
+    float:left;
+    width: 100%;
+    max-width: 700px;
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+
+  .work{ 
+  width:290px; }
+
+  .auth-image {
+    width: 330px;
+  }
+
+nav {
+  margin-right: 25px;
+}
+}
+
+@media screen and (max-width: 640px) {
+
+}
+
+
+
+
+
+
